@@ -13,15 +13,15 @@ Doc: initialize tables for Monien summation of a series $\sum_{n\geq n_0}
  at infinity. Note that the sum starts at $i = 2$! The argument \kbd{asymp}
  allows to specify different expansions:
 
- \item a real number $\alpha > 1$ means
-  $$f(n) = \sum_{i\geq 1} a_i / n^{\alpha i}$$
+ \item a real number $\beta > 0$ means
+  $$f(n) = \sum_{i\geq 1} a_i / n^{i + \beta}$$
  (Now the summation starts at $1$.)
 
  \item a vector $[\alpha,\beta]$ of reals, where we must have $\alpha > 0$
  and $\alpha + \beta > 1$ to ensure convergence, means that
   $$f(n) = \sum_{i\geq 1} a_i / n^{\alpha i + \beta}$$
- Note that $\kbd{asymp} = [\alpha, \alpha]$ is equivalent to
- $\kbd{asymp}=\alpha$.
+ Note that $\kbd{asymp} = [1, \beta]$ is equivalent to
+ $\kbd{asymp}=\beta$.
 
  \bprog
  ? \p57
@@ -31,7 +31,7 @@ Doc: initialize tables for Monien summation of a series $\sum_{n\geq n_0}
  ? sumnummonien(n = 1, sin(1/sqrt(n)) / n) - s
  %2 = -0.001[...] \\ completely wrong
 
- ? t = sumnummonieninit([1,1/2]);  \\ f(n) = sum_i 1 / n^(i/2+1)
+ ? t = sumnummonieninit(1/2);  \\ f(n) = sum_i 1 / n^(i+1/2)
  ? sumnummonien(n = 1, sin(1/sqrt(n)) / n, t) - s
  %3 = 0.E-37 \\ now correct
  @eprog\noindent (As a matter of fact, in the above summation, the
@@ -59,27 +59,27 @@ Doc: initialize tables for Monien summation of a series $\sum_{n\geq n_0}
  $\kbd{w} = [w, 0]$ is equivalent to $\kbd{w} = w$.
 
  \item a vector $[w, \kbd{oo}]$, where $w$ is a closure as above;
- we assume that $w(n)$ decreases exponentially. Note that in this case,
+ we assume that $w(n)$ decreases exponentially. Note that, in this case,
  \kbd{sumnummonien} is provided for completeness and comparison purposes only:
  one of \kbd{suminf} or \kbd{sumpos} should be preferred in practice.
+ In fact, at low accuracy the use of this last syntax may even trigger
+ an exception due to round-off errors.
 
- The cases where $w$ is a closure or $w(n) = \log n$ are the only ones where
- $n_0$ is taken into account and stored in the result. The subsequent call to
- \kbd{sumnummonien} \emph{must} use the same value.
-
+ The subsequent calls to \kbd{sumnummonien} \emph{must} use the same value
+ of $n_0$ as was used here.
  \bprog
  ? \p300
  ? sumnummonien(n = 1, n^-2*log(n)) + zeta'(2)
- time = 536 ms.
+ time = 328 ms.
  %1 = -1.323[...]E-6 \\ completely wrong, f does not satisfy hypotheses !
  ? tab = sumnummonieninit(, 1); \\ codes w(n) = log(n)
- time = 18,316 ms.
+ time = 3,993 ms.
  ? sumnummonien(n = 1, n^-2, tab) + zeta'(2)
- time = 44 ms.
+ time = 41 ms.
  %3 = -5.562684646268003458 E-309  \\ now perfect
 
- ? tab = sumnummonieninit(, n->log(n)); \\ generic, about as fast
- time = 18,693 ms.
+ ? tab = sumnummonieninit(, n->log(n)); \\ generic, slower
+ time = 9,808 ms.
  ? sumnummonien(n = 1, n^-2, tab) + zeta'(2)
  time = 40 ms.
  %5 = -5.562684646268003458 E-309  \\ identical result
