@@ -477,7 +477,7 @@ suminf(void *E, GEN (*eval)(void *, GEN), GEN a, long prec)
 {
   long fl, G;
   pari_sp av0 = avma, av;
-  GEN p1,x = real_1(prec);
+  GEN p1, x = NULL, xt;
 
   if (typ(a) != t_INT) pari_err_TYPE("suminf",a);
   a = setloop(a);
@@ -485,7 +485,20 @@ suminf(void *E, GEN (*eval)(void *, GEN), GEN a, long prec)
   fl=0; G = prec2nbits(prec) + 5;
   for(;;)
   {
-    p1 = eval(E, a); x = gadd(x,p1); a = incloop(a);
+    p1 = eval(E, a);
+    if (!x)
+    {
+      long tp = typ(p1), i;
+      GEN xi = real_1(prec);
+      if (tp == t_VEC || tp == t_COL)
+      {
+        x = cgetg(lg(p1), tp);
+        for (i = 1; i < lg(p1); ++i) gel(x, i) = xi;
+      }
+      else x = xi;
+      xt = x;
+    }
+    x = gadd(x,p1); a = incloop(a);
     if (gequal0(p1) || gexpo(p1) <= gexpo(x)-G)
       { if (++fl==3) break; }
     else
@@ -493,10 +506,10 @@ suminf(void *E, GEN (*eval)(void *, GEN), GEN a, long prec)
     if (gc_needed(av,1))
     {
       if (DEBUGMEM>1) pari_warn(warnmem,"suminf");
-      x = gerepileupto(av,x);
+      gerepileall(av,2, &xt, &x);
     }
   }
-  return gerepileupto(av0, gaddgs(x,-1));
+  return gerepileupto(av0, gsub(x, xt));
 }
 GEN
 suminf0(GEN a, GEN code, long prec)
