@@ -26,6 +26,7 @@ HC   18- sumnummonieninit(,,a) + sumnummonien(n = a, ...) with a > 1 gave wrong
      20- lngamma(1+epsilon) much slower than in pari-2.7; eg. 10^-4 at \p200
 BA   21- lfun(...,t_SER,n>=1) returned a wrong result
      22- lfun(,, negative derivation order) => internal bug
+     23- SEGV in sumnummonieninit when accuracy too low
 
   Added
       1- [libari] ZM_isidentity
@@ -62,6 +63,8 @@ BA   13- [libpari] rename FpX_fromdigits -> FpXV_FpX_fromdigits,
          FpXQX_fromdigits -> FpXQXV_FpXQX_fromdigits
      14- made lngamma(t_COMPLEX) faster
      15- made sumnummonieninit(,1) faster
+HC   16- sumnummonieninit(a) for [a,a] did not conform to documentation.
+         Change to sumnummonieninit(b) for [1,b]
 
   Removed
       1- file 'MACHINES' (no longer maintained)
